fix button alignment

--- a/src/components/MobileNav/MobileNav.module.css
+++ b/src/components/MobileNav/MobileNav.module.css
@@ -17,9 +17,6 @@
   height: 50px;
 }
 
-.icon a {
-  display: flex;
-}
 @media screen and (min-width: 991.98px) {
   .icon,
   .mobileMenu {
@@ -56,7 +53,6 @@
 
 .mobileMenu a {
   color: black;
-  display: block;
 }
 
 .mobileMenu img {
